introduced subcommands & first latex rendering

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "handlebars": "^4.0.12",
+    "handlebars-helpers": "^0.10.0",
     "js-yaml": "^3.12.0",
     "sprintf-js": "^1.1.2"
   }
