--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "handlebars": "^4.0.12",
     "handlebars-helpers": "^0.10.0",
     "js-yaml": "^3.12.0",
-    "sprintf-js": "^1.1.2"
+    "sprintf-js": "^1.1.2",
+    "sync-exec": "^0.6.2"
   }
 }
