--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "js-yaml": "^3.12.0",
     "sprintf-js": "^1.1.2",
     "sync-exec": "^0.6.2"
+  },
+  "devDependencies": {
+    "lumo-cljs": "^1.10.1"
   }
 }
