change runtime env from lumo to clojure

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@
 .cpcache
 .classpath
 .lumo_cache/
+/target
+/classes
+/checkouts
+profiles.clj
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
+/.prepl-port
+.hgignore
+.hg/
